restructuration de l'architecture
- renommage des fichiers js
- ajout d'un module de gestion des erreurs

--- a/assets/lang/fr.json
+++ b/assets/lang/fr.json
@@ -12,6 +12,9 @@
 			"placeholder":"Recherche"
 		}
 	},
+	"error":{
+		"titre":"Oups ! Une erreur est survenue :("
+	},
 	"home":{
 		"titre":"Page \"Home\"",
 		"partial1":{
